feat: change styles

--- a/src/views/Volunteer/volunteer.scss
+++ b/src/views/Volunteer/volunteer.scss
@@ -2,8 +2,8 @@
 @import "../../styles/media-queries";
 
 .container-volunter {
-  background-image: url(../../assets/ondaTop1.svg),
-    url(../../assets/ondaTop2.svg);
+  background-image: url(../../assets/Fotos\ web-13.png),
+    url(../../assets/Fotos\ web-13.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top; 
