--- a/src/views/Done/done.scss
+++ b/src/views/Done/done.scss
@@ -2,10 +2,29 @@
 @import "../../styles/media-queries";
 
 .container-done {
+  
+  padding-top: 10px;
+  max-width: 100vw;
   padding: 3rem;
+
+
+  figure {
+    .presentation_img {
+      max-width: 100vw;
+
+      @media screen and (min-width: 1400px) {
+        max-width: 100%;
+      }
+      @include desktop-large {     
+        width: 100%;
+      }
+    }
+  }
+
   .flex {
     display: flex;
     justify-content: center;
+    position: relative;
     align-items: center;
     flex-direction: column;
     @include desktop{
