--- a/src/components/CardProgramming/CardProgramming.scss
+++ b/src/components/CardProgramming/CardProgramming.scss
@@ -8,14 +8,24 @@
     justify-content: center;
     align-items: center;
 
-    .containerIcon{
+    .containerIcon {
         width: 75px;
         height: 75px;
         object-fit: contain;
         margin: 1.5rem;
 
         img {
-           width: 100%;
+            width: 100%;
         }
     }
+
+    .paragraph2 {
+        a {
+            color: #75aadb !important;
+            text-decoration: underline !important;
+
+
+        }
+    }
+
 }
