--- a/src/views/ProgrammingTheInclusion.jsx/ProgrammingTheInclusion.scss
+++ b/src/views/ProgrammingTheInclusion.jsx/ProgrammingTheInclusion.scss
@@ -27,7 +27,7 @@
     grid: 1fr / 2fr;
     grid-auto-flow: row;
     place-content: center;
-    background-color: $ligth-blue;
+    background-color: $primary-color;
     gap: 3px;
 
     @include tablet {
