--- a/src/components/Axes/_axes.scss
+++ b/src/components/Axes/_axes.scss
@@ -26,14 +26,16 @@
   }
 
   &_card {
-    background-color: $ligth-blue;    
+    background-color: white;    
     border-radius: 8px;
     margin: 15px;
     padding: 30px 20px;
     overflow: hidden;
+    border: 2px solid #75AADB;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
     transition: all 400ms ease;
 
+    
     &:hover {
       box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
       transform: translateY(-3%);
