--- a/src/views/Presentation/_presentation.scss
+++ b/src/views/Presentation/_presentation.scss
@@ -3,7 +3,7 @@
 @import "../../styles/fonts-settings";
 
 .presentation_container {
-  padding-top: 10px;
+  margin-top: 70px;
   max-width: 100vw;
   position: relative;
 
@@ -28,8 +28,9 @@
     background: rgba(255, 255, 255, 0.74);
     position: absolute;
     padding: 0.5rem 1rem;
-    top: 0.5rem;
-    left: 1rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
 
     .presentation_title {
@@ -54,15 +55,18 @@
       color: $dark-gray;
     }
 
+    @include tablet {
+      min-width: 350px;
+      padding: 1rem 2rem;
+    }
+
     @include desktop {
       padding: 1.5rem;
-      top: 2.5rem;
-      left: 2rem;
+      min-width: 400px;
+    }
 
-      @media screen and (min-width: 1450px) {
-        top: 12%;
-        left: 10%;
-      }
+    @media screen and (min-width: 1450px) {
+      min-width: 500px;
     }
   }
   .students {
