subo cambios para demostración

--- a/src/components/Egresados/_egresados.scss
+++ b/src/components/Egresados/_egresados.scss
@@ -60,7 +60,7 @@ width: 90%;
     }
   }}
 
-    iframe{
+    .iframe-egresados{
    /*   padding: 1em;*/
    /*   display:grid;
       align-content: center;
