--- a/src/components/Slider3d_2.0/Card/card.module.scss
+++ b/src/components/Slider3d_2.0/Card/card.module.scss
@@ -3,31 +3,34 @@
 
 .card {
     width: 320px;
+    max-height: 390px;
+    max-width: 370px;
     border-radius: 25px;
     background-color: #fff;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.25);;
     transition: transform 0.3s, background-color 0.3s;
+    cursor: pointer;
 }
 
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 32px rgba(0,0,0,0.12);
-  //  z-index: 2;
     border-radius: 25px;
 }
 
 .card_content {
     transition: transform 0.3s, background-color 0.3s;
     border-radius: 25px;
+    text-align: center;
 }
-// .card:hover .card_content {
-//     border-radius: 25px;
-// }
+
 .image_content, .card_content {
+    min-height: 140px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding:  4rem 2rem;
+    padding: 0rem 2rem;
 }
 
 .image_content {
@@ -61,13 +64,8 @@
     border-radius: 0 40px 0 0;
     background-color: #fff;
     border-left: 1px solid #fff;
-    transition: background-color 0.3s;
 }
 
-.card:hover .overlay::after {
-    //background-color: $ligth-blue;
-    border-left: none;
-}
 
 /* Card personas */
 .card_image_person {
