--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -33,7 +33,7 @@
         margin-top: 40px;
         display: flex;
         flex-direction: row-reverse;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
 }
 .programando_text {
@@ -64,7 +64,7 @@
         height: auto;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-around;
     }
 }
 .programando_img {
