Revert "Feat: carrusel undertaking section"

--- a/src/components/Egresados/_egresados.scss
+++ b/src/components/Egresados/_egresados.scss
@@ -60,7 +60,7 @@ width: 90%;
     }
   }}
 
-    .iframe-egresados{
+    iframe{
    /*   padding: 1em;*/
    /*   display:grid;
       align-content: center;
