--- a/src/components/Slider3d/Card/card.module.scss
+++ b/src/components/Slider3d/Card/card.module.scss
@@ -27,7 +27,7 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: $ligth-blue;
+    background-color: $primary-color;
     border-radius: 25px 25px 0 25px;
 }
 
@@ -38,7 +38,7 @@
     bottom: -40px;
     height: 40px;
     width: 40px;
-    background-color: $ligth-blue;
+    background-color: $primary-color;
 }
 
 .overlay::after {
