--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -4,7 +4,7 @@
 
 
 .programando_container {
-    padding-top: 30px;
+    padding-top: 16px;
     background-position: right;
     background-repeat: no-repeat;
     cursor: default;
@@ -65,6 +65,67 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+    }
+}
+.programando_flow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    margin: 12px 16px 0 16px;
+
+    .flow_label {
+        color: $dark-gray;
+        font-weight: 800;
+        font-size: 18px;
+        @include tablet {
+            font-size: 24px;
+        }
+        @include desktop2 {
+            font-size: 30px;
+        }
+    }
+
+    .flow_arrow svg {
+        width: 28px;
+        height: 28px;
+        @include tablet {
+            width: 36px;
+            height: 36px;
+        }
+        @include desktop2 {
+            width: 48px;
+            height: 48px;
+        }
+    }
+
+    .flow_brand {
+        display: inline-flex;
+        align-items: center;
+        gap: 6px;
+
+        img {
+            height: 32px;
+            width: auto;
+            @include tablet {
+                height: 42px;
+            }
+            @include desktop2 {
+                height: 52px;
+            }
+        }
+
+        span {
+            color: $dark-gray;
+            font-weight: 900;
+            font-size: 20px;
+            @include tablet {
+                font-size: 26px;
+            }
+            @include desktop2 {
+                font-size: 32px;
+            }
+        }
     }
 }
 .programando_img {
