--- a/src/app.scss
+++ b/src/app.scss
@@ -15,6 +15,12 @@ div[id] {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .title {
