--- a/src/components/Contacto/_contacto.scss
+++ b/src/components/Contacto/_contacto.scss
@@ -9,7 +9,7 @@
 
   min-height: 50vh;
   height: auto;
-  padding: 3rem 1rem;
+  padding: 1rem 0.75rem;
 
   display: flex;
   justify-content: center;
@@ -18,6 +18,7 @@
   @include mobile-tablet {
   }
   @include desktop {
+    padding: 2rem 1rem;
   }
 
   .flex {
@@ -27,15 +28,17 @@
     align-items: center;
 
     background-color: rgba(255, 255, 255, 0.85);
-    padding: 30px 20px;
+    padding: 16px 12px;
     border-radius: 10px;
     max-width: 700px;
     width: 90%;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
 
     @include tablet {
+      padding: 24px 16px;
     }
     @include desktop {
+      padding: 30px 20px;
     }
   }
 
@@ -44,15 +47,25 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 25px;
+    margin-bottom: 12px;
+
+    @include desktop {
+      margin-bottom: 20px;
+    }
   }
 
   .contact_text {
     text-transform: lowercase;
     color: #333;
-    font-size: 1.2em;
-    line-height: 1.4;
-    margin: 5px 0;
+    font-size: 1.1em;
+    line-height: 1.3;
+    margin: 3px 0;
+
+    @include desktop {
+      font-size: 1.2em;
+      line-height: 1.4;
+      margin: 5px 0;
+    }
   }
 
   .botones {
