--- a/src/components/Form/formDates.scss
+++ b/src/components/Form/formDates.scss
@@ -1,16 +1,30 @@
 @import "../../styles/colors";
+@import "../../styles/media-queries";
 
 .containerForm {
   border: 1px solid $primary-color;
   border-radius: 8px;
-  margin: 1rem 0;
-  /* padding: 2rem 2.5rem; */
-  padding: 3rem 1rem;
+  margin: 0.5rem 0;
+  padding: 1.5rem 0.75rem;
+
+  @include tablet {
+    margin: 1rem 0;
+    padding: 2rem 1rem;
+  }
+
+  @include desktop {
+    padding: 3rem 1rem;
+  }
 
   .subtitle {
     color: $primary-color !important;
-    margin: 1rem 0;
-    padding-bottom: 2rem;
+    margin: 0.5rem 0;
+    padding-bottom: 1rem;
+
+    @include desktop {
+      margin: 1rem 0;
+      padding-bottom: 2rem;
+    }
   }
 
   .paragraph1 {
