--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,6 +7,8 @@
   left: 0;
   top: 0;
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
   box-shadow: 0 2px 3px rgb($ligth-gray, .25);
   z-index: 1100;
 
@@ -16,11 +18,21 @@
     align-items: center;
     padding: 10px;
     margin: 0 auto;
+    max-width: 100%;
+
+    @include mobile-tablet {
+      padding: 10px 5px;
+    }
 
     .logoHeader {
       max-width: 150px;
       height: 40px;
-      margin: 5px 30px;
+      margin: 5px 10px;
+      flex-shrink: 0;
+
+      @include desktop {
+        margin: 5px 30px;
+      }
 
       img {
         width: 150px;
@@ -44,15 +56,18 @@
         top: 70px;
         padding-bottom: 50px;
         width: 100%;
+        max-width: 100vw;
         align-items: center;
         background-color: rgb($white, 0.95);
-        height: 100%;
+        height: calc(100vh - 70px);
         overflow-y: auto;
+        overflow-x: hidden;
 
         opacity: 0;
         pointer-events: none;
         transition: opacity 0.4s;
-        justify-content: space-evenly;
+        justify-content: flex-start;
+        padding-top: 20px;
 
       }
 
@@ -66,8 +81,10 @@
         @include mobile-tablet {
           padding: 0;
           border-bottom: solid 1px $ligth-blue;
-          width: 90%;
+          width: 95%;
+          max-width: 100%;
           text-align: center;
+          margin: 0 auto;
         }
       }
 
@@ -80,8 +97,16 @@
         text-align: center;       
         align-items: center;
         display: inline-flex;
-
         position: relative;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 100%;
+
+        @include mobile-tablet {
+          font-size: 15px;
+          padding: 0 10px;
+        }
 
         &:hover {
           color: $primary-color;
