--- a/src/views/Done/done.scss
+++ b/src/views/Done/done.scss
@@ -2,10 +2,10 @@
 @import "../../styles/media-queries";
 
 .container-done {
-  padding-top: 10px;
+  padding-top: 8px;
   max-width: 100vw;
   position: relative;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
 
   @include desktop-large {
     display: flex;
@@ -40,7 +40,11 @@
     @include desktop{
       padding:4rem ;
       top: 0.5rem;
+      margin-bottom: 4rem;
+    }
 
+    @include desktop-large {
+      margin-bottom: 4rem;
     }
 
 
